# llm-forge

./: .gitignore  .pre-commit-config.yaml  INFERENCE_SERVER_SUMMARY.md  README.md  activate_dev.sh  pyproject.toml  requirements.txt  test_pubmed_basic.py
.kiro/specs/llm-fine-tuning-pipeline/: design.md  requirements.md  tasks.md
configs/: deepspeed_config.json  pubmed_api.yaml  serving.yaml  training.yaml
data/: high_quality_papers_demo.json
examples/: README_quality_pipeline.md  enhanced_trainer_example.py  inference_server_example.py  model_loader_example.py  pubmed_example.py  qlora_config_example.py  quality_scorer_example.py  scientific_dataset_example.py  test_quality_pipeline.py  test_quality_pipeline_demo.py  text_processor_example.py
outputs/processed_datasets/: causal_lm_dataset.json  instruction_dataset.json  qa_dataset.json
outputs/training_data/: high_quality_papers.json  high_quality_papers.jsonl  high_quality_papers.txt
scripts/: collect_pubmed_data.py  serve.py  setup_dev.py  train.py
src/: __init__.py  logging_config.py  main.py
src/data/: __init__.py  augmentor.py  dataset_loader.py  preprocessor.py  pubmed_client.py  quality_scorer.py  scientific_dataset.py  text_processor.py  validator.py
src/models/: __init__.py  checkpoint_manager.py  config.py  enhanced_trainer.py  evaluator.py  model_loader.py  qlora_config.py  trainer.py
src/serving/: __init__.py  api.py  deployment.py  inference.py  inference_server.py  server.py
src/utils/: __init__.py  config.py  file_utils.py  logger.py  metrics.py
tests/: __init__.py  test_data.py  test_enhanced_trainer.py  test_inference_server.py  test_model_loader.py  test_pubmed_client.py  test_qlora_config.py  test_quality_scorer.py  test_scientific_dataset.py  test_setup.py  test_text_processor.py
